syntax = "proto3";
package fusionchain.treasury;

option go_package = "github.com/qredo/fusionchain/x/treasury/types";

// WalletType specifies the Layer 1 blockchain that this wallet will be used
// for.
enum WalletType {
  // The wallet type is missing (all wallets will be derived)
  WALLET_TYPE_UNSPECIFIED = 0;
  // The wallet type for native Fusion chain cosmos accounts (not ERC-20 QRDO
  // tokens)
  WALLET_TYPE_QRDO = 1;
  // The wallet type for mainnet ETH and its ERC-20 tokens (including non-native
  // QRDO)
  WALLET_TYPE_ETH = 2;
  // The wallet type for Sepolia testnet ETH and its ERC-20 tokens
  WALLET_TYPE_ETH_SEPOLIA = 3;
}